# mcaster1dnas

./: .gitignore  AUTHORS.md  AUTOTOOLS_FIX.md  BUILD_AND_RUN.md  CHANGELOG-WIN.md  CHANGELOG.md  CI_CD.md  CI_CD_SETUP_COMPLETE.md  CLAUDE-RESUME-WINDOWS-DEV.md  CLAUDE-RESUME.md  CLAUDE.md  CLOCK_AND_LOADTIME.md  CONTRIBUTING.md  ChangeLog  DNAS_CODEC_ROADMAP.md  DNAS_VIDEO_STREAMING_PATCH.md  ENTERPRISE_UI_ENHANCEMENTS.md  FEATURE_COMPLETE_SUMMARY.md  FILE_AUDIT_PLAN.md  FORK.md  GIT-VERSION-GEN  GIT_COMMIT_SUMMARY.md  ICY2-META-SPECS.md  ICY2_IMPLEMENTATION_PLAN.md  ICY2_PROTOCOL_SPEC.md  ICY2_SIMPLIFIED_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  Makefile  Makefile.am  Makefile.in  NEWS.md  PODCAST_PLANNING.md  README-MACOS-BUILD.html  README.md  README_UPDATE_SUMMARY.md  REFACTORING_COMPLETE.md  TODO.md  UI_MODERNIZATION_COMPLETE.md  (+24 more)
.github/workflows/: README.md  development.yml  windows-dev.yml
admin/: Makefile  Makefile.am  Makefile.in  credits.xsl  footer.xsl  header.xsl  listclients.xsl  listmounts.xsl  logs.xsl  manageauth.xsl  managerelays.xsl  mcaster1-modern.css  metadata.xsl  moveclients.xsl  response.xsl  songdata.xsl  stats.xsl  updatemetadata.xsl  webplayer.xsl
conf/: Makefile  Makefile.am  Makefile.in  i686-w64-mingw32.nsis.in  mcaster1-test.xml  mcaster1.xml.in  mcaster1.yaml.in  mcaster1_advanced.yaml.in  mcaster1_auth.php  mcaster1_minimal.xml.in  mcaster1_minimal.yaml.in  mcaster1_shoutcast_compat.yaml.in  x86_64-w64-mingw32.nsis.in
doc/: Makefile  Makefile.am  Makefile.in  REGENERATION_STATUS.md  index.html  index_win32.html  mcaster1dnas.hhc  mcaster1dnas.hhp  mcaster1dnas_admin.html  mcaster1dnas_basicsetup.html  mcaster1dnas_config_file.html  mcaster1dnas_faq.html  mcaster1dnas_glossary.html  mcaster1dnas_introduction.html  mcaster1dnas_listenerauth.html  mcaster1dnas_relay.html  mcaster1dnas_stats.html  mcaster1dnas_win32.html  mcaster1dnas_yp.html  win32_section1.html  win32_section2.html  win32_section3.html
docs/: CHANGELOG-WIN.html  CREDITS.html  ICY2_PROTOCOL.html  ICY2_PROTOCOL.md  ICY2_PROTOCOL_SPEC.html  MACOS_GUI.html  PLANNING.html  README.html  SONG_HISTORY_API.html  SONG_HISTORY_API.md  SSL_CERT_GENERATION.html  SSL_CERT_GENERATION.md  STATIC_MOUNTS.html  STATIC_MOUNTS.md  WINDOWS_GUI.html  WINDOWS_GUI.md  YAML_IMPLEMENTATION.html  index.html  security_reports.html
examples/: mcaster1.xml  mcaster1_minimal.xml  mcaster1_shoutcast_compat.xml
install/: mcaster1-dnas.service
install/deb/: build-deb.sh  mcaster1-keysmith-binary.asc  mcaster1-keysmith-debian.asc  update-repo.sh
install/deb/debian/: control.in  mcaster1-dnas.service  mcaster1dnas.logrotate  mcaster1dnas.tmpfiles  mcaster1dnas.yaml  postinst  postrm  prerm
m4/: ogg.m4  vorbis.m4
macos/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigTab.cpp  ConfigTab.h  ConsoleTab.cpp  ConsoleTab.h  HtmlTab.h  Info.plist  LogTab.cpp  LogTab.h  MainWindow.cpp  MainWindow.h  ServerThread.cpp  ServerThread.h  StatsPoller.cpp  StatsPoller.h  StatsTab.cpp  StatsTab.h  TrayIcon.cpp  TrayIcon.h  build-macos-gui.sh  main.cpp  server_bridge.h
macos/resources/: mcaster1.qrc
macos/resources/icons/: mcaster1.icns
scripts/: bump-version.ps1  version-bump.sh
src/: Makefile  Makefile.am  Makefile.in  admin.c  admin.h  auth.c  auth.h  auth_cmd.c  auth_cmd.h  auth_htpasswd.c  auth_htpasswd.h  auth_url.c  auth_url.h  cfgfile.c  cfgfile.h  cfgfile_yaml.c  cfgfile_yaml.h  client.c  client.h  compat.h  connection.c  connection.h  curl_ice.h  event.c  event.h  flv.c  flv.h  fnmatch.c  format.c  format.h  format_ebml.c  format_ebml.h  format_flac.c  format_flac.h  format_kate.c  format_kate.h  format_midi.c  format_midi.h  format_mp3.c  format_mp3.h  (+48 more)
src/avl/: Makefile  Makefile.am  Makefile.in  README
src/httpp/: Makefile  Makefile.am  Makefile.in  README
src/log/: Makefile  Makefile.am  Makefile.in  log.c  log.h
src/net/: Makefile  Makefile.am  Makefile.in  resolver.c  sock.c  sock.h
src/thread/: Makefile  Makefile.am  Makefile.in  README  thread.c  thread.h
src/timing/: Makefile  Makefile.am  Makefile.in  README
ssl/: mcaster1dnas-selfsigned.crt  mcaster1dnas-selfsigned.key  mcaster1dnas.pem
web/: Makefile  Makefile.am  Makefile.in  auth.xsl  credits.xsl  footer.xsl  generate-favicon.html  header.xsl  index.html  mcaster-utils.js  server_version.xsl  songdata.xsl  status-json.xsl  status.xsl  status2.xsl  style.css  webplayer.xsl
web/images/: Makefile  Makefile.am  Makefile.in
windows/: ConfigTab.cpp  LogTab.cpp  LogTab.h  Makefile  Makefile.am  Makefile.in  Mcaster1Console.rc  Mcaster1Console.vcxproj  Mcaster1DNAS.sln  Mcaster1Service.vcxproj  Mcaster1Win.clw  Mcaster1Win.cpp  Mcaster1Win.dsp  Mcaster1Win.dsw  Mcaster1Win.h  Mcaster1Win.rc  Mcaster1Win.vcxproj  Mcaster1WinDlg.cpp  Mcaster1WinDlg.h  SslGen.cpp  SslGen.h  StatsTab.cpp  StatsTab.h  Status.cpp  Status.h  StdAfx.cpp  TabPageSSL.cpp  TabPageSSL.h  Traynot.cpp  build-all.ps1  build-console.ps1  build-mcaster1win.ps1  build-service.ps1  config.h  copy-vcpkg-deps.ps1  git-version.ps1  mcaster1.dsp  mcaster1.nsis  mcaster164.nsis  mcaster1Service.cpp  (+8 more)
windows/installer/: build-installer.ps1  mcaster1dnas.nsi  prepare-images.ps1
windows/res/: Makefile.am  Makefile.in  Mcaster1Win.rc2
