## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

admindir = $(pkgdatadir)/admin
dist_admin_DATA = listclients.xsl listmounts.xsl moveclients.xsl response.xsl \
                  logs.xsl showlog.xsl xspf.xsl viewxml.xsl \
                  stats.xsl manageauth.xsl updatemetadata.xsl metadata.xsl managerelays.xsl webplayer.xsl \
                  header.xsl footer.xsl credits.xsl \
                  favicon.ico favicon-16x16.png favicon-32x32.png \
                  apple-touch-icon.png android-chrome-192x192.png android-chrome-512x512.png

