## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

docdir = $(datadir)/doc/mcaster1
doc_DATA = index.html mcaster1dnas_admin.html mcaster1dnas_basicsetup.html \
	mcaster1dnas_config_file.html mcaster1dnas_faq.html mcaster1dnas_glossary.html \
	mcaster1dnas_introduction.html mcaster1dnas_relay.html mcaster1dnas_stats.html \
	mcaster1dnas_win32.html mcaster1dnas_yp.html mcaster1dnas_listenerauth.html

EXTRA_DIST = Index.hhk mcaster1dnas.hhc mcaster1dnas.hhp index_win32.html \
	stats1.jpg style.css win32_section1.html win32_section2.html \
	win32_section3.html windowtitle.jpg $(doc_DATA)
