## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign
SUBDIRS = images

webdir = $(pkgdatadir)/web
dist_web_DATA = status.xsl \
                status2.xsl \
                status-json.xsl \
                webplayer.xsl \
                header.xsl footer.xsl \
                style.css \
                mcaster-utils.js \
                auth.xsl \
                server_version.xsl \
                credits.xsl \
                7.xsl \
                adminbar.html \
                statusbar.html \
                admin.html \
                index.html \
                favicon.ico \
                favicon-16x16.png \
                favicon-32x32.png \
                apple-touch-icon.png \
                android-chrome-192x192.png \
                android-chrome-512x512.png
